# bike-stations

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
sql/: setup_db.sql
src/: main.rs
src/database/: mod.rs
src/handler/: mod.rs  stations.rs
src/model/: gbfs.rs  mod.rs  stations.rs
